--- a/IntroductionHtml/HTML - Personal Site/index.html
+++ b/IntroductionHtml/HTML - Personal Site/index.html
@@ -141,6 +141,13 @@
                 <td>Teste 6</td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <td>foot 1</td>
+                <td>foot 2</td>
+                <td>foot 3</td>
+            </tr>
+        </tfoot>
     </table>
     
     <br>
